<resources>
    <string name="app_name">NBA Teams App</string>
    <string name="nba_teams_name">NBA Team</string>
    <string name="detail">Detail</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="twitter">https://www.twitter.com</string>
    <string name="button_details">More Details</string>
    <string name="share">Share</string>
    <string name="profle_name">Firhan Mahdi Ramadhani</string>
    <string name="profile_detail">I currently learning Android Programming using Kotlin. I\'m very excited to learn more with Dicoding and Bangkit programme as it boost my motivation to make something impactful!</string>
    <string name="profile_linkedin">https://www.linkedin.com/id/firhanrm</string>
    <string name="profile_email">a0080919@bangkitacademy</string>
</resources>