<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nba_team_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NBATeamDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" >

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/iv_team_photo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/nba" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:text="@string/nba_teams_name" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Team" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Title"
                    android:text="Twitter" />

                <TextView
                    android:id="@+id/tv_item_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextLink"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textStyle="bold"
                    android:textColorLink="@color/green"
                    android:text="Link" />
            </LinearLayout>

        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:gravity="center_horizontal"
            android:text="Record" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="11sp"
            android:layout_marginBottom="12dp"
            android:text="last update: 13 March 2021" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="Wins" />

                <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="-" />

                <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Loses" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_item_wins"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="46sp"
                    style="@style/Title"
                    android:text="@string/wins" />

                <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="46sp"
                    style="@style/Title"
                    android:text="-" />

                <TextView
                    android:id="@+id/tv_item_loses"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="46sp"
                    style="@style/Title"
                    android:text="@string/loses" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="Detail" />

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:text="Share on WA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:inputType="phone"
                android:lines="1" />

            <Button
                android:id="@+id/button_share"
                style="@style/Button"
                android:background="@drawable/border"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>